--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -77,7 +77,7 @@ PYTHON_INCLUDE := /usr/include/python2.7 \
 #                 /usr/lib/python3.5/dist-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB := /usr/lib
+PYTHON_LIB := /usr/lib usr/local/lib
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
