--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -38,6 +38,7 @@ CUDA_ARCH := -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
 		-gencode arch=compute_50,code=compute_50 \
+		-gencode arch=compute_75,code=sm_75 \
 		-gencode arch=compute_75,code=compute_75
 
 # BLAS choice:
